<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:background="@color/naranja"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:text="@string/titulo"
        android:textColor="@color/black"
        android:textSize="28sp"

        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="28dp"
        app:cardElevation="6dp"
        app:cardBackgroundColor="@color/white"
        >

        <!-- Contenido dentro del CardView -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bienvenido"
                android:textColor="#EF6C00"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.8"
                android:text="@string/inicia_sesion"
                android:textColor="@color/black" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="38dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/email"
                android:textColor="@color/darkgray"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:drawableEnd="@drawable/done"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textColorHint="#757575"
                tools:ignore="VisualLintTextFieldSize" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:importantForAccessibility="no" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/password"
                android:textColor="@color/darkgray"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:drawableEnd="@drawable/eye"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textColorHint="#757575"
                tools:ignore="VisualLintTextFieldSize" />

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:clickable="true"
                android:focusable="true"
                android:minHeight="48dp"
                android:paddingTop="8dp"
                android:text="¿Olvidaste tu contraseña?"
                android:textColor="@color/darkgray"

                tools:ignore="HardcodedText" />
            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <!-- Botón Login -->
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/login2"
                android:textColor="#795548"
                android:textStyle="bold"
                app:cornerRadius="32dp"
                tools:ignore="VisualLintButtonSize" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <!-- Botón Registro -->
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/registro"
                android:textColor="#795548"
                android:textStyle="bold"
                app:cornerRadius="32dp"
                tools:ignore="VisualLintButtonSize" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>



