<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/apuntes_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/tvAsignaturas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/asignaturas"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btn_add_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/grisclaro2"
        android:padding="20dp"
        android:text="@string/añadirasignatura"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <!-- 📌 Scroll para poder subir/bajar asignaturas -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:overScrollMode="always"
        android:contentDescription="@string/apuntes">

        <LinearLayout
            android:id="@+id/container_subjects"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:dividerPadding="8dp"/>
    </ScrollView>

</LinearLayout>